--- a/ui/stylesheet.qss
+++ b/ui/stylesheet.qss
@@ -1,4 +1,44 @@
 QWidget
 {
-    background-color: green;
+    background-color: black;
+    color: white;
+    font-family:courier;
+}
+
+ui--QFoldableWidget
+{
+}
+
+ui--VCOWidget, ui--WaveformSelectorWidget, ui--ADSRSettingsWidget, ui--MixerWidget,
+ui--VCOWidget > QWidget
+{
+    border: 1px solid pink;
+}
+
+QSlider::groove:vertical {
+    background: red;
+    position: absolute; /* absolutely position 4px from the left and right of the widget. setting margins on the widget should work too... */
+    left: 4px; right: 4px;
+}
+
+QSlider::handle:vertical {
+    height: 10px;
+    background: green;
+    margin: 0 -4px; /* expand outside the groove */
+}
+
+QSlider::add-page:vertical {
+    background: white;
+}
+
+QSlider::sub-page:vertical {
+    background: pink;
+}
+
+QDial { 
+    color: "transparent";
+}
+
+QSpinBox, QDoubleSpinBox {
+    color: black;
 }
